--- a/practicaDiseñoResponsive/Mostly Fluid/index.html
+++ b/practicaDiseñoResponsive/Mostly Fluid/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostly Fluid</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <nav>Navbar</nav>
     <div class="container">
-      <section class="columna1" style="background-color: blue;">
-        Sección 1
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="columna2" style="background-color: pink;">
-        Sección 2
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="columna3" style="background-color: yellow;">
-        Sección 3
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="columna4" style="background-color: green;">
-        Sección 4
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-      <section class="columna5" style="background-color: red;">
-        Sección 5
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-
+        <section class="columna1" style="background-color: #3498db; color: white;">
+            Sección 1
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section class="columna2" style="background-color: #f1948a;">
+            Sección 2
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section class="columna3" style="background-color: #f4d03f;">
+            Sección 3
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section class="columna4" style="background-color: #58d68d;">
+            Sección 4
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section class="columna5" style="background-color: #ec7063;">
+            Sección 5
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
     </div>
-  </body>
+</body>
 </html>
