Corrección de errores en el Responsive del styles.css de libreriaResponsive

--- a/libreriaResponsive/tienda.html
+++ b/libreriaResponsive/tienda.html
@@ -195,13 +195,13 @@
                     <a href="#" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <div class="footer-links">
-                    <a href="#">Inicio</a> |
-                    <a href="#">Catálogo</a> |
-                    <a href="#">Novedades</a> |
-                    <a href="#">Contacto</a> |
-                    <a href="#">Sobre nosotros</a> |
-                    <a href="#">Política de privacidad</a> |
-                    <a href="#">Política de cookies</a> |
+                    <a href="#">Inicio</a>
+                    <a href="#">Catálogo</a>
+                    <a href="#">Novedades</a>
+                    <a href="#">Contacto</a>
+                    <a href="#">Sobre nosotros</a>
+                    <a href="#">Política de privacidad</a>
+                    <a href="#">Política de cookies</a>
                     <a href="#">Aviso legal</a>
                 </div>
             </div>
